--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,8 @@
   --color-secondary: #091a2b;
   --color-secondary-low: #e6e8ea;
   --color-text: #a8aeaf;
+  --color-button-primary: #0284c7;
+  --color-button-secondary: #0369a1;  
 }
 
 
